    * osdefinedfunctions: call: new param Nestlevel
    * osparser: evaluatestring: new param Nestlevel  (to use while call defined function)
    * osparser: producestringlist: new param Nestlevel  (to use while call defined function)
    * osparser: doSetVar: new param Nestlevel  (to use while call evaluatestring/producestringlist)

-- Detlef Oertel <d.oertel@uib.de>  Wed, 06 Dec 2017:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.9) stable; urgency=low

  * osmain: log command line parameter of opsi-script call
  * osmain: startprogrammodes: fix for /productid (bug created with /logproductid)
  * osmain: 'Wait for ending' while running now log level 8
  * product sorting logging moved to log_prog

-- Detlef Oertel <d.oertel@uib.de>  Mon, 06 Nov 2017:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.8) stable; urgency=low

  * start to work on new modifier '/encoding <encoding>' for patches sections
  * osparser: fix Message 'ReportMessages' changed to 'ScriptErrorMessages'
  * osparser: fix Message 'ScriptErrorMessages' 'is set to' true/false was wrong
  * osparser:  tsImportLib: replace constants

-- Detlef Oertel <d.oertel@uib.de>  Mon, 06 Nov 2017:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.7) stable; urgency=low

  * default loglevel is now 7 (was 6) (osconf)
  * new config: opsi-script.global.ScriptErrorMessages : boolean ; default=true (created as false)
  * config: opsi-script.global.default_loglevel will be created as 7

-- Detlef Oertel <d.oertel@uib.de>  Tue, 10 Oct 2017:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.6) stable; urgency=low

  * osconf: readConfigFromService reads configstates:
     opsi-script.global.ScriptErrorMessages : boolean ; default=true (created as false)
     opsi-script.global.AutoActivityDisplay : boolean ; default=false  (created as true)
  * general: adjusting log levels
    5:LLNotice: comments,messages, Execution of sections
    6:LLInfo; Statements, New values for stringvars , complete boolean expression